force-app/main/default/objects/Aether_Support_Product__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Aether Product Support Items</relationshipLabel>
        <relationshipName>Aether_Product_Support_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Aether Product Support Items</relationshipLabel>
        <relationshipName>Aether_Product_Support_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replacement_Value__c</fullName>
        <label>Replacement Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Aether Product Support Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aether Product Support Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>