force-app/main/default/objects/Aether_Support_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
            <filterScope>Everything</filterScope>
            <label>All</label>
</ListView>